# TouringPolygons

./: .gitignore  README.md  polygon2.py  problem1.py  problem1_correctness.py  problem1_draw.py  problem1_fast.py  problem1_fast_draw.py  problem1_jit2.py  problem1_new.py  problem1_speed_test.py  problem1_tests.py  problem2.py  problem22.py  problem2_draw.py  problem2_tests.py  problem2again.py  problem3.py  run_interactive.py  tempCodeRunnerFile  test.ipynb  time_on_commits.py  vector2.py
C++/: polygon2.cpp  polygon2.h  problem1.cpp  run.py  vector2.cpp  vector2.h
GameHelper/: draw_polygons.py  game_template.py  text.py
Images/: cronogram.py
MAC0215/: main.tex  time_on_commits.py
Paper/: paper.tex
Relatorio/: main.tex  notes.md  referencias.bib
RelatorioParcial/: referencias.bib  relatorio_parcial.tex
Relatório/: main.tex  notes.md  referencias.bib
Relatório2/: main.tex  notes.md  referencias.bib
src/NonConvexTPP/C++/: CMakeLists.txt  run.sh
src/NonConvexTPP/C++/include/: common.h  tests.h  tpp_convex.h  vector2.h
src/NonConvexTPP/C++/src/: common.cpp  main-test.cpp  main-tpp_bnb.cpp  main.cpp  tests.cpp  tpp_convex.cpp  tpp_convex_binary_search.cpp  tpp_convex_common.cpp  vector2.cpp
src/UnconstrainedTPP/C++/: CMakeLists.txt  benchmark_results_k_10_m_1_to_40000.csv  benchmark_results_k_1_m_1_to_40000.csv  benchmark_results_k_20_m_1_to_40000.csv  benchmark_results_k_3_m_1_to_40000.csv  benchmark_results_k_5_m_1_to_40000.csv  run.py  run.sh  shell_define.sh  tests.cpp  tests.txt  u_tpp_naive.cpp  u_tpp_naive.h  utpp_naive.cpp  vector2.cpp
src/UnconstrainedTPP/C++/Benchmarks/: benchmark_results_k_100_m_1_to_40000.csv  benchmark_results_k_10_m_1_to_40000.csv  benchmark_results_k_1_m_1_to_40000.csv  benchmark_results_k_1_to_10000_m_3.csv  benchmark_results_k_1_to_1000_m_3.csv  benchmark_results_k_1_to_1000_m_5.csv  benchmark_results_k_1_to_1500_m_5.csv  benchmark_results_k_1_to_2000_m_5.csv  benchmark_results_k_1_to_3000_m_10.csv  benchmark_results_k_1_to_3000_m_100.csv  benchmark_results_k_1_to_3000_m_20.csv  benchmark_results_k_1_to_3000_m_3.csv  benchmark_results_k_1_to_3000_m_5.csv  benchmark_results_k_1_to_3000_m_50.csv  benchmark_results_k_1_to_5000_m_3.csv  benchmark_results_k_20_m_1_to_40000.csv  benchmark_results_k_3_m_1_to_40000.csv  benchmark_results_k_50_m_1_to_40000.csv  benchmark_results_k_5_m_1_to_40000.csv  clean_df.py  plot_graph.py
src/UnconstrainedTPP/C++/include/: common.h  tests.h  tpp_convex.h  tpp_convex_binary_search.h  tpp_convex_common.h  tpp_convex_linear_search.h  tpp_convex_naive.h  tpp_convex_tamc.h  vector2.h
src/UnconstrainedTPP/C++/src/: common.cpp  main-verify_solutions.cpp  main.cpp  main2.cpp  main3.cpp  main_tests.cpp  tests.cpp  tpp_convex_binary_search.cpp  tpp_convex_common.cpp  tpp_convex_gurobi.cpp  tpp_convex_linear_search.cpp  tpp_convex_naive.cpp  tpp_convex_tamc.cpp  vector2.cpp
src/UnconstrainedTPP/C++/tests/: README.md
(+117 files in other folders)
